# fox

./: Cargo.toml  README.md  cliff.toml
.codecrafters/: compile.sh  run.sh
.github/workflows/: release.yml
src/: error.rs  evaluator.rs  function.rs  lexer.rs  main.rs  parser.rs  program.rs
src/vm/: compiler.rs  disassembler.rs  mod.rs  opcode.rs
