[package]
name = "fox"
version = "0.2.0"
authors = ["Sheape <sheape@outlook.ph>"]
description = "Fast interpreter for the Lox programming language."
repository = "https://github.com/Sheape/fox"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
